2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs: Added missing NEC and SHARP floppy types.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.CommonTypes.csproj: Bumped version to
	3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.CommonTypes.csproj: Public beta release
	3.2.99.1.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs: Corrected typo.

2016-08-02  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs: Added Priam DataTower.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.CommonTypes.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.CommonTypes.csproj: Bump to version 3.2.0

2016-07-29  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.CommonTypes.csproj: Bump to version 3.1.0.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* MediaTypeFromSCSI.cs:
	* DiscImageChef.CommonTypes.csproj: Code re-styling.

2016-07-28  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs:
	* Partition.cs: Refactor and code cleanup.

2016-02-04  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs:
	  Added Jaguar CD, Super CD-ROM² and 3DO discs.

2016-01-16  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs:
	  Added about 200 new media types.

2016-01-16  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs:
	  Refactor: added regions

2016-01-16  Natalia Portillo  <claunia@claunia.com>

	* MediaType.cs:
	* DiscImageChef.CommonTypes.csproj:
	  Refactor most disk references to media.

2015-12-31  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added Acorn Archimedes and Commodore 15xx floppies.

2015-12-03  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added support for CD-V.

2015-11-24  Natalia Portillo  <claunia@claunia.com>

	* DiskType.cs:
	  Added DVD-RW DL, DVD-Download, HD DVD-R DL and HD DVD-RW DL.
